# paramesh

./: .envrc  Cargo.toml  flake.nix  pyproject.toml
src/: lib.rs  main.rs
src/microcad/: generate.rs  mod.rs
