[package]
name = "paramesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "paramesh"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
itertools = "0.14.0"
microcad-builtin = "0.2.18"
microcad-core = "0.2.18"
microcad-lang = "0.2.18"
pyo3 = { version = "0.25.0", features = ["auto-initialize"] }
rand = "0.9.2"
reedline = "0.44.0"
rerun = { version = "0.27.3", features = ["nasm"] }
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
